infra/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-digital-khata-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smart-digital-khata-api
  template:
    metadata:
      labels:
        app: smart-digital-khata-api
    spec:
      containers:
        - name: api
          image: smart-digital-khata-api:latest
          ports:
            - containerPort: 5000
