infra/kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: smart-digital-khata-api-service
spec:
  selector:
    app: smart-digital-khata-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
